my first project on github

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             <span class="material-symbols-outlined" id="paying">
                 lock
             </span>
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined" id="cart">
                 shopping_cart
                 </span>
                 <span class="material-symbols-outlined">
@@ -45,6 +45,19 @@
 
     </div>
  </nav>
+<div class="mycart">
+    <div class="close-cart">
+        <samp id="close-cart">&times;</samp>
+    </div>
+    <div class="left-cart">
+        <h1>Shopping cart</h1>
+        <button>Shopping</button>
+
+    </div>
+    <div class="right-cart">
+
+    </div>
+</div>
 <div class="paying">
     <div class="close-payment">
         <samp id="close-paying">&times;</samp>
